--- a/src/app/admin/reservation/manage-reservation/manage-reservation.component.html
+++ b/src/app/admin/reservation/manage-reservation/manage-reservation.component.html
@@ -6,43 +6,53 @@
 </div>
 <div mat-dialog-content>
     <ng-container *ngIf="(data && data.bookingType && isDataLoaded); else add">
-        <app-manage-reservation-form [roomType]="data.roomType" #manageReservationForm
-            [type]="data.bookingType" [canManageReservation]="true"
-            [enableWaitingList]="false" [reservationData]="reservationData"
-            [isEditMode]="true" (closeModal)="close(true)">
-        </app-manage-reservation-form>
+        <mat-tab-group class="w-100" dynamicHeight mat-align-tabs="start" [(selectedIndex)]="activeBookingTab" (selectedIndexChange)="onBookingTabChanged($event)">
+            <mat-tab [label]="'home.individualBooking' | translate">
+                <ng-container *ngIf="activeBookingTab === 0">
+                    <app-reservation [type]="bookingType.individual" [roomType]="data.roomType" [isEditMode]="true"
+                        [isAdmin]="true" [enableWaitingList]="false" (closeModal)="close(true)"
+                        [reservationData]="reservationData"></app-reservation>
+                </ng-container>
+            </mat-tab>
+            <mat-tab [label]="'home.groupBooking' | translate">
+                <ng-container *ngIf="activeBookingTab === 1">
+                    <div class="alert alert-info">
+                        <div class="font-weight-bold">
+                            {{'common.notes' | translate}}:
+                        </div>
+                        <div>
+                            {{'common.childrenNotes' | translate}}
+                        </div>
+                    </div>
+                    <app-reservation [type]="bookingType.group" [roomType]="data.roomType" [isEditMode]="true"
+                        [isAdmin]="true" [enableWaitingList]="false" (closeModal)="close(true)"
+                        [reservationData]="reservationData" [selectedRoomTab]="activeRoomTab"></app-reservation>
+                </ng-container>
+            </mat-tab>
+        </mat-tab-group>
     </ng-container>
     <ng-template #add>
-        <mat-tab-group class="w-100" [selectedIndex]="selectedTabIndex" (selectedIndexChange)="onTabChanged($event)">
+        <mat-tab-group class="w-100" dynamicHeight mat-align-tabs="start" [(selectedIndex)]="activeBookingTab" (selectedIndexChange)="onBookingTabChanged($event)">
             <mat-tab [label]="'home.individualBooking' | translate">
-                <div class="bg-white" *ngIf="selectedTabIndex < 1">
-                    <app-reservation [type]="bookingType.individual" 
-                        [enableWaitingList]="false"></app-reservation>
+                <div class="bg-white" *ngIf="activeBookingTab === 0">
+                    <app-reservation [type]="bookingType.individual" [enableWaitingList]="false"
+                        (closeModal)="close(true)"></app-reservation>
                 </div>
             </mat-tab>
             <mat-tab [label]="'home.groupBooking' | translate">
-                <div class="bg-white" *ngIf="selectedTabIndex > 0">
+                <div class="bg-white" *ngIf="activeBookingTab === 1">
                     <div class="alert alert-info">
-                        <div>
-                            {{'common.childInfo' | translate}}
+                        <div class="font-weight-bold">
+                            {{'common.notes' | translate}}:
                         </div>
                         <div>
-                            {{'common.adultInfo' | translate}}
-                        </div>
-                        <div>
-                            {{'common.maximumPersons' | translate}}
+                            {{'common.childrenNotes' | translate}}
                         </div>
                     </div>
-                    <app-reservation [type]="bookingType.group" 
-                        [enableWaitingList]="false"></app-reservation>
+                    <app-reservation [type]="bookingType.group" [enableWaitingList]="false"
+                        (closeModal)="close(true)"></app-reservation>
                 </div>
             </mat-tab>
         </mat-tab-group>
     </ng-template>
-</div>
-<div *ngIf="data && data.bookingType && isDataLoaded" mat-dialog-actions>
-    <button color="primary" mat-flat-button type="button" cdkFocusInitial (click)="save()" [disabled]="isSaveInProgress">
-        <span> {{ 'common.save' | translate }}</span>
-        <i *ngIf="isSaveInProgress" class="fa-solid fa-spinner fa-spin px-2"></i>
-    </button>
 </div>
