--- a/src/app/admin/reservation/manage-reservation-form/manage-reservation-form.component.html
+++ b/src/app/admin/reservation/manage-reservation-form/manage-reservation-form.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="model.form" novalidate class="row mx-0" (ngSubmit)="save()">
-  <div class="rounded primary-section row mx-0 pt-3">
+  <div class="rounded bg-white row p-3 m-3">
     <div class="w-100 d-flex px-2 pb-2">
       <mat-icon color="primary">stars</mat-icon>
     </div>
@@ -80,7 +80,7 @@
         {{'validations.requiredField' | translate}}
       </mat-error>
     </mat-form-field>
-    <ng-container *ngIf="canManageReservation">
+    <ng-container *ngIf="isAdmin">
       <mat-form-field class="col-md-6 col-12 px-md-2 px-0">
         <mat-label>{{'common.bookingStatus' | translate}}</mat-label>
         <mat-select formControlName="bookingStatus">
@@ -97,14 +97,14 @@
         <mat-label>{{'common.adminNotes' | translate}}</mat-label>
         <textarea type="text" matInput formControlName="adminNotes"></textarea>
       </mat-form-field>
-      <div class="col-md-6 col-12 px-md-2 px-0 pb-4">
-        <div class="bg-white rounded p-2">
+      <div class="col-md-5 col-12">
+        <div class="cr-bg-gray rounded p-2">
           <label>{{'common.totalCost' | translate}}</label>
           <div class="font-weight-bold text-dark">{{model.totalCost}} جنيه</div>
         </div>
       </div>
-      <div class="col-md-6 col-12 px-md-2 px-0 pb-4">
-        <div class="bg-white rounded p-2">
+      <div class="col-md-7 col-12">
+        <div class="cr-bg-gray rounded p-2">
           <label>
             {{'common.remaining' | translate}}
             <small class="text-muted">
@@ -118,17 +118,14 @@
   </div>
   <ng-container formArrayName="participants">
     <ng-container *ngIf="model.participants.controls.length > 0">
-      <div *ngFor="let participant of model.participants.controls; let i=index" class="rounded col-12 mt-3 pt-3 adult-section">
-        <div [formGroupName]="i">
+      <div *ngFor="let participant of model.participants.controls; let i=index" class="col-12 px-0">
+        <div [formGroupName]="i" class="rounded bg-white m-3 p-3">
           <div *ngIf="model.form.value.bookingType === model.bookingType.group"
             class="d-flex w-100 align-items-center justify-content-between">
             <div class="d-flex align-items-center">
               <div class="d-flex justify-content-center align-items-center text-light count mx-2">{{i+1}}</div>
               {{ 'common.individual' | translate}}
             </div>
-            <!-- <button type="button" mat-icon-button color="warn" (click)="removeParticipant(i)">
-              <mat-icon>delete</mat-icon>
-            </button> -->
           </div>
           <mat-form-field class="col-md-6 col-12 px-md-2 px-0">
             <mat-label>{{'home.arabicFullName' | translate}}</mat-label>
@@ -214,8 +211,8 @@
 
   <ng-container formArrayName="children">
     <ng-container *ngIf="model.children.controls.length > 0">
-      <div *ngFor="let child of model.children.controls; let i=index" class="rounded col-12 mt-3 pt-3 child-section">
-        <div [formGroupName]="i">
+      <div *ngFor="let child of model.children.controls; let i=index" class="col-12 px-0">
+        <div [formGroupName]="i" class="rounded m-3 p-3 bg-white">
           <div *ngIf="model.form.value.bookingType === model.bookingType.group"
             class="d-flex w-100 align-items-center justify-content-between">
             <div class="d-flex align-items-center">
@@ -258,18 +255,15 @@
     </ng-container>
   </ng-container>
   <ng-container>
-    <div *ngIf="model.form.value.bookingType === model.bookingType.group" class="mt-3">
-      <!-- <button *ngIf="model.participants.controls.length < (model.form.value.roomType - 1)" type="button" mat-stroked-button color="primary" (click)="addAdult()">
-        {{'common.AddAdult' | translate}}
-      </button> -->
+    <div *ngIf="model.form.value.bookingType === model.bookingType.group" class="col-12 px-2">
       <button type="button" mat-stroked-button color="primary" (click)="addChild()"
         class="child-btn">{{'common.addFreeChild' | translate}}
       </button>
     </div>
-    <div *ngIf="!canManageReservation" class="col-12 pt-3 px-md-2 px-0 d-flex justify-content-end">
+    <div class="col-12 py-3 d-flex justify-content-end">
       <button mat-flat-button type="submit" color="primary" [disabled]="model.isLoading || model.participants.controls.length < (model.form.value.roomType - 1)">
         <i *ngIf="model.isLoading" class="fa-solid fa-spinner fa-spin"></i>
-        {{'common.addBooking' | translate}}
+        {{ (isAdmin ? 'common.save' : 'common.addBooking') | translate}}
       </button>
     </div>
   </ng-container>
