--- a/src/app/admin/reservation/manage-reservation-form/manage-reservation-form.component.scss
+++ b/src/app/admin/reservation/manage-reservation-form/manage-reservation-form.component.scss
@@ -1,15 +1,3 @@
-.primary-section {
-  background-color: #dcd8cd;
-}
-
-.adult-section {
-  background-color: #e3e3e3;
-}
-
-.child-section {
-  background-color: #c6c6c6;
-}
-
 .count {
   width: 20px;
   height: 20px;
@@ -19,4 +7,8 @@
 
 .child-btn {
   margin-inline-start: 8px;
+}
+
+.cr-bg-gray {
+  background-color: #ecefef;
 }
