--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -56,7 +56,7 @@
 <div *ngIf="isReservationAllowed && showForm" class="container h-100 mt-lg-3 mt-0 px-0">
   <div class="d-flex justify-content-center">
     <div class="col-md-9 col-12 px-0 container-border main-tabs">
-      <mat-tab-group class="w-100" [selectedIndex]="selectedTabIndex" (selectedIndexChange)="onTabChanged($event)">
+      <mat-tab-group class="w-100" dynamicHeight mat-align-tabs="start" [selectedIndex]="selectedTabIndex" (selectedIndexChange)="onTabChanged($event)">
         <mat-tab [label]="'home.individualBooking' | translate">
           <ng-container *ngIf="selectedTabIndex < 1">
             <ng-container *ngIf="(settings | async) as setting">
@@ -77,18 +77,9 @@
               <div class="font-weight-bold">
                 {{'common.notes' | translate}}:
               </div>
-              <!-- <div>
-                {{'common.childInfo' | translate}}
-              </div>
-              <div>
-                {{'common.adultInfo' | translate}}
-              </div> -->
               <div>
                 {{'common.childrenNotes' | translate}}
               </div>
-              <!-- <div>
-                {{'common.maximumPersons' | translate}}
-              </div> -->
             </div>
             <app-reservation [type]="bookingType.group" (showForm)="showTicketForm($event)"
               [enableWaitingList]="enableWaitingList"></app-reservation>
