--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -153,7 +153,7 @@
                             </div>
                             <div class="d-flex">
                                 <div class="font-weight-bold">{{'table.childrenCount' | translate}}: &nbsp;</div>
-                                <div>{{ element.childrenCount + 1 }}</div>
+                                <div>{{ element.childrenCount }}</div>
                             </div>
                         </td>
                         <td mat-footer-cell *matFooterCellDef>
