--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,19 +33,6 @@
     </div>
   </div>
 
-
-  <!-- <div *ngIf="enableWaitingList && isReservationAllowed && !isClosed">
-    <mat-toolbar color="primary" class="col-12 px-0">
-      <div *ngIf="setting && setting[0].title != ''" class="w-100 d-flex justify-content-center"
-        [innerText]="setting[0].title"></div>
-    </mat-toolbar>
-    <div class="p-5 m-5">
-      <div class="alert alert-warning text-center">
-        حجز المؤتمر مكتمل. يمكنك التسجيل في قائمة الانتظار
-      </div>
-    </div>
-  </div> -->
-
   <div *ngIf="isReservationAllowed && showInfo"
     class="container my-md-4 p-md-3 p-0 container-border overflow-auto info-section">
     <app-info [settings]="setting" (showForm)="showTicketForm($event)"></app-info>
@@ -56,36 +43,7 @@
 <div *ngIf="isReservationAllowed && showForm" class="container h-100 mt-lg-3 mt-0 px-0">
   <div class="d-flex justify-content-center">
     <div class="col-md-9 col-12 px-0 container-border main-tabs">
-      <mat-tab-group class="w-100" dynamicHeight mat-align-tabs="start" [selectedIndex]="selectedTabIndex" (selectedIndexChange)="onTabChanged($event)">
-        <mat-tab [label]="'home.individualBooking' | translate">
-          <ng-container *ngIf="selectedTabIndex < 1">
-            <ng-container *ngIf="(settings | async) as setting">
-              <div *ngIf="enableWaitingList" class="alert alert-danger" [innerHtml]="setting[0].waitingListMessage">
-              </div>
-            </ng-container>
-            <app-reservation [type]="bookingType.individual" (showForm)="showTicketForm($event)"
-              [enableWaitingList]="enableWaitingList"></app-reservation>
-          </ng-container>
-        </mat-tab>
-        <mat-tab [label]="'home.groupBooking' | translate">
-          <ng-container *ngIf="selectedTabIndex > 0">
-            <ng-container *ngIf="(settings | async) as setting">
-              <div *ngIf="enableWaitingList" class="alert alert-danger" [innerHtml]="setting[0].waitingListMessage">
-              </div>
-            </ng-container>
-            <div class="alert alert-info">
-              <div class="font-weight-bold">
-                {{'common.notes' | translate}}:
-              </div>
-              <div>
-                {{'common.childrenNotes' | translate}}
-              </div>
-            </div>
-            <app-reservation [type]="bookingType.group" (showForm)="showTicketForm($event)"
-              [enableWaitingList]="enableWaitingList"></app-reservation>
-          </ng-container>
-        </mat-tab>
-      </mat-tab-group>
+      <app-reservation (bookingDone)="bookingSuccessfully()"></app-reservation>
     </div>
   </div>
 </div>
