--- a/src/app/admin/primary/cost-details/cost-details.component.html
+++ b/src/app/admin/primary/cost-details/cost-details.component.html
@@ -16,8 +16,8 @@
                             <mat-icon *ngIf="element.isMain" color="primary" class="mx-2">star</mat-icon>
                             <mat-icon *ngIf="element.isChild" color="primary" class="mx-2">child_care</mat-icon>
                             <div> <b>{{'common.name' | translate}}:</b> {{element.name}}</div>
-                            <div> <b>{{'common.reservationPrice' | translate}}:</b> {{element.reservationPrice | number:'1.0-2'}}</div>
-                            <div> <b>{{'common.transportPrice' | translate}}:</b> {{element.transportPrice}}</div>
+                            <div> <b>{{'common.reservationPrice' | translate}}:</b> {{element.reservationPrice }}</div>
+                            <div> <b>{{'common.transportPrice' | translate}}:</b> {{element.transportPrice }}</div>
                             <div class="d-flex align-items-center">
                                 <b>{{'common.privateTransport' | translate}}:</b>&nbsp;
                                 <ng-container *ngIf="element.privateTransport; else unCheck">
@@ -53,7 +53,7 @@
 
                 <ng-container matColumnDef="reservationPrice">
                     <th mat-header-cell *matHeaderCellDef>{{'common.reservationPrice' | translate}}</th>
-                    <td mat-cell *matCellDef="let element">{{ element.reservationPrice | number:'1.0-2'}}</td>
+                    <td mat-cell *matCellDef="let element">{{ element.reservationPrice }}</td>
                     <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
 
