--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -315,12 +315,9 @@
                                 <div class="font-weight-bold">{{'common.lastUpdatedBy' | translate}}:&nbsp;</div>
                                 <ng-container *ngIf="element.lastUpdatedBy; else empty">{{element.lastUpdatedBy}}</ng-container>
                             </div>
-                            <div class="d-flex">
-                                <div class="font-weight-bold">{{'common.lastUpdateDate' | translate}}:&nbsp;</div>
-                                <ng-container *ngIf="element.lastUpdateDate; else empty">
-                                    <div>{{element.lastUpdateDate.toMillis() | date:'medium'}}</div>
-                                </ng-container>
-                            </div>
+                            <ng-container *ngIf="element.lastUpdateDate">
+                                <div>{{element.lastUpdateDate.toMillis() | date:'medium'}}</div>
+                            </ng-container>
                         </td>
                         <td mat-footer-cell *matFooterCellDef></td>
                     </ng-container>
