--- a/src/app/admin/reservation/manage-reservation-form/manage-reservation-form.component.html
+++ b/src/app/admin/reservation/manage-reservation-form/manage-reservation-form.component.html
@@ -56,7 +56,7 @@
       </mat-form-field>
       <mat-form-field class="col-md-4 col-12 px-md-2 px-0">
         <mat-label>{{'common.birthDate' | translate}}</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="birthDate" [max]="model.childMinDate"
+        <input matInput [matDatepicker]="picker" formControlName="birthDate" [max]="model.adultMaxDate"
           [min]="model.adultMinDate">
         <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
@@ -150,7 +150,7 @@
             </mat-form-field>
             <mat-form-field class="col-md-6 col-12 px-md-2 px-0">
               <mat-label>{{'common.birthDate' | translate}}</mat-label>
-              <input matInput [matDatepicker]="picker" formControlName="birthDate" [max]="model.childMinDate"
+              <input matInput [matDatepicker]="picker" formControlName="birthDate" [max]="model.adultMaxDate"
                 [min]="model.adultMinDate">
               <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
               <mat-datepicker #picker></mat-datepicker>
@@ -241,10 +241,14 @@
             class="child-btn">{{'common.AddAdult' | translate}}
           </button>
         </div>
-        <div *ngIf="model.form.value.bookingType === model.bookingType.group">
+        <div *ngIf="model.form.value.bookingType === model.bookingType.group" class="d-flex justify-content-center align-items-center">
           <button type="button" mat-stroked-button color="primary" (click)="addChild()"
-            class="child-btn">{{'common.addFreeChild' | translate}}
+            class="child-btn">
+            {{'common.addChild' | translate}}
           </button>
+          <div class="font-weight-bold text-dark px-2">
+            بناءا علي سن الطفل يتم تحديد الاشتراك سواء مجاني، نصف اشتراك أو اشتراك كامل
+          </div>
         </div>
       </div>
     </div>
