--- a/src/app/admin/reservation/reservation.component.html
+++ b/src/app/admin/reservation/reservation.component.html
@@ -8,14 +8,14 @@
       </app-manage-reservation-form>
     </ng-container>
   </mat-tab>
-  <mat-tab label="حجز غرفة مزدوجة (1050 جنيه)">
+  <mat-tab label="حجز غرفة مزدوجة (950 جنيه)">
     <div class="alert alert-info">
       <div class="font-weight-bold">
         {{'common.notes' | translate}}:
       </div>
-      <div>
-        {{'common.childrenNotes' | translate}}
-      </div>
+      <div>{{'common.childrenNotes' | translate}}</div>
+      <div>{{'common.childrenNoteOne' | translate}}</div>
+      <div>{{'common.childrenNoteTwo' | translate}}</div>
     </div>
     <ng-container *ngIf="model.isDouble">
       <app-manage-reservation-form
@@ -25,14 +25,14 @@
       </app-manage-reservation-form>
     </ng-container>
   </mat-tab>
-  <mat-tab label="حجز غرفة ثلاثية (950 جنيه)">
+  <mat-tab label="حجز غرفة ثلاثية (800 جنيه)">
     <div class="alert alert-info">
       <div class="font-weight-bold">
         {{'common.notes' | translate}}:
       </div>
-      <div>
-        {{'common.childrenNotes' | translate}}
-      </div>
+      <div>{{'common.childrenNotes' | translate}}</div>
+      <div>{{'common.childrenNoteOne' | translate}}</div>
+      <div>{{'common.childrenNoteTwo' | translate}}</div>
     </div>
     <ng-container *ngIf="model.isTriple">
       <app-manage-reservation-form
@@ -42,14 +42,14 @@
       </app-manage-reservation-form>
     </ng-container>
   </mat-tab>
-  <mat-tab label="حجز غرفة رباعية (800 جنيه)">
+  <mat-tab label="حجز غرفة رباعية (700 جنيه)">
     <div class="alert alert-info">
       <div class="font-weight-bold">
         {{'common.notes' | translate}}:
       </div>
-      <div>
-        {{'common.childrenNotes' | translate}}
-      </div>
+      <div>{{'common.childrenNotes' | translate}}</div>
+      <div>{{'common.childrenNoteOne' | translate}}</div>
+      <div>{{'common.childrenNoteTwo' | translate}}</div>
     </div>
     <ng-container *ngIf="model.isQuad">
       <app-manage-reservation-form
