Update prices and calculations

--- a/src/app/admin/reservation/manage-reservation-form/manage-reservation-form.component.html
+++ b/src/app/admin/reservation/manage-reservation-form/manage-reservation-form.component.html
@@ -244,11 +244,8 @@
         <div *ngIf="model.form.value.bookingType === model.bookingType.group" class="d-flex justify-content-center align-items-center">
           <button type="button" mat-stroked-button color="primary" (click)="addChild()"
             class="child-btn">
-            {{'common.addChild' | translate}}
+            {{'common.addFreeChild' | translate}}
           </button>
-          <div class="font-weight-bold text-dark px-2">
-            بناءا علي سن الطفل يتم تحديد الاشتراك سواء مجاني، نصف اشتراك أو اشتراك كامل
-          </div>
         </div>
       </div>
     </div>
